# SSH-CLIENT-C-

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USER_GUIDE.md
include/: ANSIParser.h  AppSettings.h  ConnectionDialog.h  ConnectionProfile.h  CredentialManager.h  CustomTabBar.h  CustomTabWidget.h  ErrorDialog.h  FileTypeColorizer.h  Logger.h  MainWindow.h  PreferencesDialog.h  ProfileStorage.h  SSHAuthenticator.h  SSHChannel.h  SSHConnection.h  SSHWorkerThread.h  SessionState.h  SimplePasswordDialog.h  SplitContainer.h  SplitView.h  TerminalBuffer.h  TerminalEmulator.h  TerminalScreen.h  TerminalView.h  TerminalWidget.h
scripts/: build_all_platforms.sh  build_linux.sh  build_macos.sh  build_windows.bat  check_memory_leaks.sh
specs/001-ssh-client-speckit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ssh-client-speckit/contracts/: IConnectionManager.md  IProfileStorage.md  ITerminalEmulator.md
src/: main.cpp
src/models/: ConnectionProfile.cpp  SessionState.cpp  TerminalBuffer.cpp
src/ssh/: SSHAuthenticator.cpp  SSHChannel.cpp  SSHConnection.cpp  SSHWorkerThread.cpp
src/storage/: CredentialManager.cpp  ProfileStorage.cpp
src/terminal/: ANSIParser.cpp  FileTypeColorizer.cpp  TerminalEmulator.cpp  TerminalScreen.cpp  TerminalView.cpp  TerminalWidget.cpp
src/ui/: ConnectionDialog.cpp  CustomTabBar.cpp  CustomTabWidget.cpp  MainWindow.cpp  PreferencesDialog.cpp  SimplePasswordDialog.cpp  SplitContainer.cpp  SplitView.cpp
src/utils/: AppSettings.cpp  ErrorDialog.cpp  Logger.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_async_io.cpp  test_e2e_connection.cpp  test_key_auth.cpp  test_password_auth.cpp  test_terminal_display.cpp
tests/performance/: CMakeLists.txt  test_performance.cpp
tests/ui/: CMakeLists.txt  test_connection_dialog.cpp  test_main_window.cpp
tests/unit/: CMakeLists.txt  test_ansi_parser.cpp  test_connection_profile.cpp  test_credential_manager.cpp  test_profile_storage.cpp  test_session_state.cpp  test_ssh_authenticator.cpp  test_ssh_connection.cpp  test_ssh_worker.cpp  test_terminal_buffer.cpp  test_terminal_input.cpp
